...
    )
}

@Composable
fun BottomNavBar(navController: NavController) {
    NavigationBar(modifier = Modifier.semantics { contentDescription =
        "bottom_nav"}) {
        val navBackStackEntry by navController.currentBackStackEntryAsState()
        val currentRoute = navBackStackEntry?.destination?.route

        createListOfItems().forEach { item ->
            NavigationBarItem(
                selected = currentRoute == item.route,
...
